--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "leaflet": "^1.3.1",
+    "leaflet.markercluster": "^1.3.0",
+    "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-leaflet": "^1.9.1",
+    "react-leaflet-markercluster": "^1.1.8",
     "webpack": "^4.11.1",
     "webpack-cli": "^3.0.2"
   },
